# simple_ros

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docker/: Plain Text.txt  dockerfile  install_deps.sh
docs/: API参考.md  可视化模块.md  核心模块设计.md  示例代码解析.md  项目总览.md
examples/: quad_simulator.cpp  quad_visualizer.cpp
include/: foxglove_bridge.h  global_init.h  master_tcp_server.h  message_graph.h  message_queue.h  msg_factory.h  node_handle.h  node_handle.inl  poll_manager.h  publisher.h  publisher.inl  ros_rpc_client.h  ros_rpc_server.h  subscriber.h  subscriber.inl  subscription_handler_registry.h  timer.h
proto/: example.proto  geometry_msgs.proto  marker.proto  message.proto  ros_rpc.proto
scripts/: proto.sh  quick_start.sh
src/: foxglove_bridge.cpp  global_init.cpp  master_tcp_server.cpp  message_graph.cpp  msg_factory.cpp  node_handle.cpp  poll_manager.cpp  ros_rpc_client.cpp  ros_rpc_server.cpp  subscriber.cpp  subscription_handler_registry.cpp  timer.cpp
test/: test_init.cpp  test_msg_factory.cpp  test_muduo.cpp  test_poll_manager.cpp  test_protobuf.cpp  test_pub.cpp  test_ros_rpc.cpp  test_sub.cpp
tools/: foxglove_bridge_node.cpp  master.cpp  rosnode.cpp  rostopic.cpp
